feat(app): implement JDBC repositories for users, friendships, films, likes, genres, and MPA with separate controllers for MPA and genres
Signed-off-by: Sergei Kanchikov <kanchikov.sergey@gmail.com>