@@ -33,42 +33,26 @@ public class JdbcFilmRepository implements FilmRepository {
     SimpleJdbcInsert simpleJdbcInsert = new SimpleJdbcInsert(jdbcTemplate).withTableName("films")
                                                                           .usingGeneratedKeyColumns("film_id");
 
-    Map<String, Object> params = Map.of("name",
-                                        command.name(),
-                                        "description",
-                                        command.description(),
-                                        "release_date",
-                                        command.releaseDate(),
-                                        "duration",
-                                        command.duration(),
-                                        "mpa_id",
-                                        command.mpa()
-                                               .id());
+    Map<String, Object> params = Map.of("name", command.name(), "description", command.description(), "release_date",
+                                        command.releaseDate(), "duration", command.duration(), "mpa_id", command.mpa()
+                                                                                                                .id());
 
     long filmId = simpleJdbcInsert.executeAndReturnKey(params)
                                   .longValue();
-    updateFilmGenres(filmId,
-                     command.genres());
+    updateFilmGenres(filmId, command.genres());
 
-    return filmFactory.create(filmId,
-                              command);
+    return filmFactory.create(filmId, command);
   }
 
   @Override
   public Film update(UpdateFilmCommand command) {
     String sql = "UPDATE films SET name = ?, description = ?, release_date = ?, duration = ?, mpa_id = ? " +
                  "WHERE film_id = ?";
-    jdbcTemplate.update(sql,
-                        command.name(),
-                        command.description(),
-                        command.releaseDate(),
-                        command.duration(),
+    jdbcTemplate.update(sql, command.name(), command.description(), command.releaseDate(), command.duration(),
                         command.mpa()
-                               .id(),
-                        command.id());
+                               .id(), command.id());
 
-    updateFilmGenres(command.id(),
-                     command.genres());
+    updateFilmGenres(command.id(), command.genres());
     return filmFactory.update(command);
   }
 
@@ -80,8 +64,7 @@ public class JdbcFilmRepository implements FilmRepository {
   @Override
   public Optional<Film> findById(long id) {
     String sql = BASE_FILM_QUERY + " WHERE f.film_id = ?";
-    List<Film> films = mapRowsToFilms(jdbcTemplate.queryForList(sql,
-                                                                id));
+    List<Film> films = mapRowsToFilms(jdbcTemplate.queryForList(sql, id));
     return films.stream()
                 .findFirst();
   }
@@ -91,13 +74,17 @@ public class JdbcFilmRepository implements FilmRepository {
     if (ids == null || ids.isEmpty()) {
       return List.of();
     }
-    String inSql = String.join(",",
-                               Collections.nCopies(ids.size(),
-                                                   "?"));
-    String sql = String.format(BASE_FILM_QUERY + " WHERE f.film_id IN (%s)",
-                               inSql);
-    return mapRowsToFilms(jdbcTemplate.queryForList(sql,
-                                                    ids.toArray()));
+    String inSql = String.join(",", Collections.nCopies(ids.size(), "?"));
+    String sql = String.format(BASE_FILM_QUERY + " WHERE f.film_id IN (%s)", inSql);
+    List<Film> unsortedFilms = mapRowsToFilms(jdbcTemplate.queryForList(sql, ids.toArray()));
+
+    Map<Long, Film> filmMap = unsortedFilms.stream()
+                                           .collect(Collectors.toMap(Film::id, film -> film));
+
+    return ids.stream()
+              .map(filmMap::get)
+              .filter(Objects::nonNull)
+              .toList();
   }
 
   private List<Film> mapRowsToFilms(List<Map<String, Object>> rows) {
@@ -111,25 +98,22 @@ public class JdbcFilmRepository implements FilmRepository {
     Map<Long, Set<Genre>> genresByFilmId = getGenresForFilmIds(filmIds);
 
     return rows.stream()
-               .map(row -> {
-                 long filmId = (Long) row.get("film_id");
-                 Set<Genre> genres = genresByFilmId.get(filmId);
+               .map(row ->
+                      {
+                        long filmId = (Long) row.get("film_id");
+                        Set<Genre> genres = genresByFilmId.get(filmId);
 
-                 if (genres == null || genres.isEmpty()) {
-                   return null;
-                 }
+                        if (genres == null || genres.isEmpty()) {
+                          return null;
+                        }
 
-                 return new Film(filmId,
-                                 (String) row.get("name"),
-                                 (String) row.get("description"),
-                                 ((java.sql.Date) row.get("release_date")).toLocalDate(),
-                                 Duration.ofMinutes((Integer) row.get("duration")),
-                                 genres,
-                                 new Mpa((Long) row.get("mpa_id"),
-                                         (String) row.get("mpa_name")));
-               })
+                        return new Film(filmId, (String) row.get("name"), (String) row.get("description"),
+                                        ((java.sql.Date) row.get("release_date")).toLocalDate(),
+                                        Duration.ofMinutes((Integer) row.get("duration")), genres,
+                                        new Mpa((Long) row.get("mpa_id"), (String) row.get("mpa_name")));
+                      })
                .filter(Objects::nonNull)
-               .collect(Collectors.toList());
+               .toList();
   }
 
   private Map<Long, Set<Genre>> getGenresForFilmIds(Set<Long> filmIds) {
@@ -137,38 +121,31 @@ public class JdbcFilmRepository implements FilmRepository {
       return Map.of();
     }
     Map<Long, Set<Genre>> genresByFilmId = new HashMap<>();
-    String inSql = String.join(",",
-                               Collections.nCopies(filmIds.size(),
-                                                   "?"));
+    String inSql = String.join(",", Collections.nCopies(filmIds.size(), "?"));
     String sql = "SELECT fg.film_id, g.genre_id, g.name " +
                  "FROM film_genres AS fg JOIN genres AS g ON fg.genre_id = g.genre_id " + "WHERE fg.film_id IN (" +
                  inSql + ")";
 
-    jdbcTemplate.query(sql,
-                       rs -> {
-                         long filmId = rs.getLong("film_id");
-                         Genre genre = new Genre(rs.getLong("genre_id"),
-                                                 rs.getString("name"));
-                         genresByFilmId.computeIfAbsent(filmId,
-                                                        k -> new HashSet<>())
-                                       .add(genre);
-                       },
-                       filmIds.toArray());
+    jdbcTemplate.query(sql, rs ->
+      {
+        long filmId = rs.getLong("film_id");
+        Genre genre = new Genre(rs.getLong("genre_id"), rs.getString("name"));
+        genresByFilmId.computeIfAbsent(filmId, k -> new HashSet<>())
+                      .add(genre);
+      }, filmIds.toArray());
 
     return genresByFilmId;
   }
 
   private void updateFilmGenres(long filmId, Set<Genre> genres) {
-    jdbcTemplate.update("DELETE FROM film_genres WHERE film_id = ?",
-                        filmId);
+    jdbcTemplate.update("DELETE FROM film_genres WHERE film_id = ?", filmId);
     if (genres != null && !genres.isEmpty()) {
       List<Object[]> batchArgs = genres.stream()
                                        .map(genre -> new Object[] {filmId,
                                                                    genre.id()
                                        })
-                                       .collect(Collectors.toList());
-      jdbcTemplate.batchUpdate("INSERT INTO film_genres (film_id, genre_id) VALUES (?, ?)",
-                               batchArgs);
+                                       .toList();
+      jdbcTemplate.batchUpdate("INSERT INTO film_genres (film_id, genre_id) VALUES (?, ?)", batchArgs);
     }
   }
 }
